<resources>
    <string name="app_name">MyCave</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="title_activity_settings">Settings</string>
    <string name="ipaddress">IP Address</string>
    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="connection_info">Connection information</string>
    <string name="dummyip">xxx.xxx.xxx.xxx</string>
    <string name="save">Save</string>
    <string name="sharedPreferencesFile">com.vermeersch.mycave.PREFERENCE_FILE_KEY</string>
    <string name="test">Test</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lighting">Lighting</string>
    <string name="uplighter">Uplighter</string>
    <string name="desklight">Desk Light</string>
    <string name="twilights">Twilights</string>
    <string name="standinglamp">Standing Lamp</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="action_heating">Heating</string>
    <string name="title_activity_heating">Heating settings</string>
    <string name="heating">Heating</string>
    <string name="begin">Begin</string>
    <string name="end">End</string>
    <string name="weekend">Weekend</string>
    <string name="week">Week</string>
    <string name="temperature_high">Temperature high</string>
    <string name="temperature_low">Temperature low</string>
    <string name="temperature">Temperature</string>
    <string name="atmosphere">Atmosphere</string>
    <string name="humidity">Humidity</string>
    <string name="heatingState">Heater state</string>
    <string name="targetTemperature">Target temperature</string>
    <string name="presence">Presence</string>
    <string name="cancel">Cancel</string>
    <string name="led">led</string>
    <string name="naming_info">Naming</string>
    <string name="outlet1">Outlet 1</string>
    <string name="outlet2">Outlet 2</string>
    <string name="outlet3">Outlet 3</string>
    <string name="outlet4">Outlet 4</string>
    <string name="outlet5">Outlet 5</string>
    <string name="outlet6">Outlet 6</string>

</resources>
