
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    >
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rlAtmosphere">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tvClimate"
        android:text="@string/atmosphere"/>

    <TextView
        android:layout_marginTop="20sp"
        android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/tvClimate"
    android:text="@string/temperature"
    android:id="@+id/tvTemperature"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tvTemperature"
        android:layout_alignParentEnd="true"
        android:id="@+id/tvTemperatureValue"
        />

    <TextView
        android:layout_marginTop="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTemperature"
        android:text="@string/humidity"
        android:id="@+id/tvHumidity"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tvHumidity"
        android:layout_alignParentEnd="true"

        android:id="@+id/tvHumidityValue"
        />



        <TextView
            android:layout_marginTop="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvHumidity"
            android:id="@+id/tvTargetTemperature"
            android:text="@string/targetTemperature"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tvTargetTemperature"
            android:layout_alignParentEnd="true"
            android:id="@+id/tvTargetTemperatureValue"
            />

        <TextView
            android:layout_marginTop="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTargetTemperature"
            android:text="@string/presence"
            android:id="@+id/tvPresence"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/tvTargetTemperature"
            android:layout_alignBaseline="@id/tvPresence"
            android:id="@+id/swPresence"
            android:onClick="onPresenceClick"/>

    </RelativeLayout>



    <RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
        android:id="@+id/rlOutlet1"
        android:layout_below="@id/rlAtmosphere"
        android:layout_marginTop="20sp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lighting"
            android:id="@+id/tvLighting"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="20sp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/led"
            android:onClick="openColourPicker"
            android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/outlet1"
        android:layout_below="@id/tvLighting"
        android:id="@+id/txtOutlet1"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLighting"
        android:layout_alignParentEnd="true"
        android:weightSum="2"
       >


        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/swOutlet1"
            android:tag="outlet1"
            android:onClick="onSwitch"/>
    </LinearLayout>

</RelativeLayout>

    <RelativeLayout
        android:layout_below="@id/rlOutlet1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rlOutlet2"
       >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outlet2"

            android:id="@+id/txtOutlet2"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:weightSum="2">



            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/swOutlet2"
                android:tag="outlet2"
                android:onClick="onSwitch"/>
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@id/rlOutlet2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rlDesklight"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outlet3"

            android:id="@+id/txtOutlet3"/>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:weightSum="2">




            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/swOutlet3"
                android:tag="outlet3"
                android:onClick="onSwitch"/>
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@id/rlDesklight"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rlUplighter"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outlet4"

            android:id="@+id/txtOutlet4"/>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:weightSum="2">



            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/swOutlet4"
                android:tag="outlet4"
                android:onClick="onSwitch"/>


        </LinearLayout>



    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlUplighter"
        android:id="@+id/rlOutlet5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outlet5"

            android:id="@+id/txtOutlet5"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:weightSum="2">



            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/swOutlet5"
                android:tag="outlet5"
                android:onClick="onSwitch"/>


        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlOutlet5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outlet6"

            android:id="@+id/txtOutlet6"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:weightSum="2">


            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/swOutlet6"
                android:tag="outlet6"
                android:onClick="onSwitch"/>


        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
